--- a/.gitignore
+++ b/.gitignore
@@ -7,3 +7,6 @@
 .vs/ProductManagement/v17/DocumentLayout.json
 .vs/ProductManagement/v17/TestStore/0/013.testlog
 .vs/ProductManagement/v17/TestStore/0/testlog.manifest
+.vs/ProductManagement/DesignTimeBuild/.dtbcache.v2
+.vs/ProductManagement/FileContentIndex/c5c48365-58c5-496b-8dd2-581a4aad21a1.vsidx
+.vs/ProductManagement/v17/TestStore/0/014.testlog
