--- a/src/ProductManagement.Services/ProductManagement.Services.csproj
+++ b/src/ProductManagement.Services/ProductManagement.Services.csproj
@@ -7,7 +7,7 @@
   </PropertyGroup>
 
   <ItemGroup>
-    <ProjectReference Include="../ProductManagement.Data/ProductManagement.Data.csproj" />
+    <ProjectReference Include="..\ProductManagement.Data\ProductManagement.Data.csproj" />
   </ItemGroup>
 
 </Project>
